--- a/slides.html
+++ b/slides.html
@@ -377,16 +377,11 @@ Prof.&nbsp;Paul D. Pickell
 <section id="a-brief-canadian-history-of-gis-5" class="slide level2">
 <h2>A Brief Canadian History of GIS</h2>
 
-<img data-src="images/vancouver-clds-1982.jpg" class="r-stretch quarto-figure-center"></section>
+<img data-src="images/vancouver-clds-1982.jpg" class="r-stretch quarto-figure-center"><p class="caption">Redpath, K. (1982). Canada Land Use Monitoring Program, Total Land Use Change in Urban Centred Regions, Vancouver, 1967-1976. Report No.&nbsp;12. Lands Directorate, Environment Canada, Ottawa.</p></section>
 <section id="a-brief-canadian-history-of-gis-6" class="slide level2">
 <h2>A Brief Canadian History of GIS</h2>
-<div class="quarto-figure quarto-figure-center">
-<figure>
-<p><img data-src="images/okanagan-fruitlands-1985.png" height="400"></p>
-<figcaption>Kerr, M. A. (1985). Okanagan Fruitlands Land-Use Change Dynamics and the Impact of Federal Programs. Lands Directorate, Environment Canada.</figcaption>
-</figure>
-</div>
-</section>
+
+<img data-src="images/okanagan-fruitlands-1985.png" width="248" class="r-stretch quarto-figure-center"><p class="caption">Kerr, M. A. (1985). Okanagan Fruitlands Land-Use Change Dynamics and the Impact of Federal Programs. Lands Directorate, Environment Canada.</p></section>
 <section id="a-brief-canadian-history-of-gis-7" class="slide level2">
 <h2>A Brief Canadian History of GIS</h2>
 <p><img data-src="images/okanagan-fruitlands-1985-2.png" class="absolute" style="top: 100px; left: 0px; height: 75%; "></p>
@@ -395,8 +390,9 @@ Prof.&nbsp;Paul D. Pickell
 <section id="spatial-temporal-asset-catalogs-stac" class="slide level2">
 <h2>Spatial Temporal Asset Catalogs (STAC)</h2>
 <p><a href="https://radiantearth.github.io/stac-browser/#/?.language=en">Spatial Temporal Asset Catalog (STAC) Browser</a></p>
-<p>To access public AWS data, first set environment variable in QGIS through the Python Console (Plugins &gt; Python Console):</p>
-<pre><code>import os
+<pre><code># To access public AWS data, first set environment variable in QGIS through the Python Console (Plugins &gt; Python Console)
+
+import os
 os.environ['AWS_NO_SIGN_REQUEST'] = 'YES'</code></pre>
 </section>
 <section id="british-columbia-gis-data-resources" class="slide level2">
